[gd_scene format=3 uid="uid://records_screen"]

[ext_resource type="Script" path="res://scripts/ui/records_screen.gd" id="1"]

[node name="RecordsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0509804, 0.101961, 0.164706, 1.0)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.15
anchor_right = 0.85
anchor_top = 0.15
anchor_bottom = 0.85

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Records"
horizontal_alignment = HorizontalAlignment.CENTER

[node name="SummaryLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
horizontal_alignment = HorizontalAlignment.CENTER
autowrap_mode = TextServer.AUTOWRAP_WORD

[node name="HistoryHeader" type="Label" parent="Panel/VBox"]
text = "Recent Runs"
horizontal_alignment = HorizontalAlignment.CENTER

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox"]
size_flags_vertical = Control.SIZE_EXPAND_FILL

[node name="HistoryContainer" type="VBoxContainer" parent="Panel/VBox/Scroll"]
unique_name_in_owner = true
theme_override_constants/separation = 6

[node name="BackButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
text = "Back to Menu"
